--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "html-template-tag": "^3.2.0",
     "morgan": "^1.10.0",
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.2",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
